--- a/themes/default/base.html
+++ b/themes/default/base.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    {% block header %}{% endblock %}
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
+    <meta name="Author" content="Jie Ma" >
 </head>
 
 <body>
     <header id="header">
         <menu>
-            <h1>bitbang</h1>
+            <h1>{{ setting.title }}</h1>
             <ul>
-                <li>Sign Up</li>
-                <li>Sign In</li>
+                <li><a href="/">Home</a></li>
+                {% if user %}
+                <li><a href="/signout">Sign Out</a></li>
+                {% else %}
+                <li><a href="/signup">Sign Up</a></li>
+                <li><a href="/signin">Sign In</a></li>
+                {% endif %}
             </ul>
         </menu>
     </header>
@@ -21,6 +28,8 @@
 
     <footer id="footer">
         <p>bitsable</p>
+        <p><img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif"
+alt="Powered by Google App Engine" /></p>
     </footer>
 </body>
 </html>
