--- a/themes/default/signup.html
+++ b/themes/default/signup.html
@@ -3,7 +3,7 @@
 <title>{{ setting.title }} - Sign Up</title>
 {% endblock %}
 
-{% block body %}
+{% block content %}
 
 <h1>Join Us</h1>
 {% if notice %}
