--- a/themes/default/signin.html
+++ b/themes/default/signin.html
@@ -3,7 +3,7 @@
 <title>{{ setting.title }} - Sign In</title>
 {% endblock %}
 
-{% block body %}
+{% block content %}
 
 <h1>Log in</h1>
 {% if notice %}
