--- a/themes/default/base.html
+++ b/themes/default/base.html
@@ -9,7 +9,10 @@
 
 <body>
     <header id="header">
-        <div class="top"><h1>{{ setting.title }}</h1></div>
+        <div class="top">
+        <div class="hdrl"></div>
+        <div class="hdrr"></div>
+        <h1>{{ setting.title }}</h1>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
@@ -22,6 +25,7 @@
                 <li><a href="/spam">Spam</a></li>
             </ul>
         </nav>
+        </div>
     </header>
     
     <section id="content">
@@ -29,7 +33,7 @@
     </section>
 
     <footer id="footer">
-        <div class="bottom"><p>bitsable <img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif"
+        <div class="bottom"><p class="left">bitsable</p><p class="right"><img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif"
 alt="Powered by Google App Engine" /></p></div>
     </footer>
 </body>
