--- a/themes/default/spam/new.html
+++ b/themes/default/spam/new.html
@@ -8,9 +8,9 @@
     <div class="bheaderl"></div>
     <div class="bheaderr"></div>
     <h2>New Spam</h2>
-    {% if back_url %}<ul><li><a href="{{ back_url }}">Back</a></li></ul>{% endif %}
+    {% if back_url %}<ul><li class="nobg"><a href="{{ back_url }}">Back</a></li></ul>{% endif %}
 </div>
-<div class="main">
+<div id="main">
 {% include '_spam.html' %}
 </div>
 {% endblock %}
