favico and fixed setting.title in def post

--- a/themes/default/spam/_spam.html
+++ b/themes/default/spam/_spam.html
@@ -99,7 +99,7 @@
         </dd>
         <dd>
 			<label>&nbsp;</label>
-			<input type="submit" value="Spam It" name="submit" />
+			<input type="submit" value="Spam It" name="submit" class="submit" />
 		</dd>
     </dl>
 </form>
