--- a/themes/default/base.html
+++ b/themes/default/base.html
@@ -17,12 +17,12 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 {% if user %}
-                <li><a href="/signout">Sign Out</a></li>
+                <li><a href="/signout/">Sign Out</a></li>
                 {% else %}
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/signin">Sign In</a></li>
+                <li><a href="/signup/">Sign Up</a></li>
+                <li><a href="/signin/">Sign In</a></li>
                 {% endif %}
-                <li><a href="/spam">Spam</a></li>
+                <li><a href="/spam/">Spam</a></li>
             </ul>
         </nav>
         </div>
