--- a/themes/default/signin.html
+++ b/themes/default/signin.html
@@ -13,7 +13,7 @@
     {% if notice %}
     <div class="message notice"><p class="message errormsg">{{ notice }}</p></div>
     {% endif %}
-    <form method="post" action="/signin">
+    <form method="post" action="/signin/">
     	<dl class="signin">
     		<dd>
     			<label>Username</label>
