--- a/themes/default/signup.html
+++ b/themes/default/signup.html
@@ -13,7 +13,7 @@
     {% if notice %}
     <span class="error">{{ notice }}</span>
     {% endif %}
-    <form method="post" action="/signup">
+    <form method="post" action="/signup/">
     	<dl class="signup">
     		<dd>
     			<label>Username</label>
