--- a/themes/default/spam/index.html
+++ b/themes/default/spam/index.html
@@ -9,7 +9,7 @@
     <div class="bheaderr"></div>
     <h2>Spam</h2>
     {% if can_spam %}
-    <ul><li class="nobg"><a href="/spam/new">New</a></li></ul>
+    <ul><li class="nobg"><a href="/spam/new/">New</a></li></ul>
     {% endif %}
     </div>
 <div id="main">
